Fix Broken Variable, and hide overlapping voice channel glowing bar

--- a/src/source.css
+++ b/src/source.css
@@ -19,7 +19,7 @@
 }
 
 :root {
-  --indicator-hover: var(--background-modifier-hover);
+  --indicator-hover: var(--background-mod-subtle);
   --indicator-unread-border: hsla(var(--indicator-unread)/0.75);
   --indicator-unread-background: hsla(var(--indicator-unread)/0.05);
   --indicator-unread-hover-background: hsla(var(--indicator-unread)/0.10);
@@ -163,4 +163,7 @@
 }
 .channel__972a0 .interactive_bf202d {
   background: transparent;
+}
+.voiceChannelHighlightBorder_c69b6d, .voiceChannelHighlightGlow_c69b6d {
+  display: none;
 }
